--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -3,7 +3,8 @@
 <head>
 	<meta charset="UTF-8">
 	<title>lesson_01 form</title>
-	<link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
     <div class="form__wrapper">
@@ -12,8 +13,8 @@
         </header>
         <div class="form__content">
             <div class="form__content--block-1">
-                <div class="form__link fb">Log in with Facebook</div>
-                <div class="form__link gl">Log in with Google +</div>
+                <a href="#" class="form__link fb"><i class="fa fa-facebook" aria-hidden="true"> </i> Log in with Facebook </a>
+                <a href="#" class="form__link gl"><img src="img/gl.png" alt="" class="form__link--gl-img">Log in with Google +</div>
             </div>
             <div class="form__content--block-2">
                 <form action="#" method="get">
