--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -14,7 +14,7 @@
         <div class="form__content">
             <div class="form__content--block-1">
                 <a href="#" class="form__link fb"><i class="fa fa-facebook" aria-hidden="true"> </i> Log in with Facebook </a>
-                <a href="#" class="form__link gl"><img src="img/gl.png" alt="" class="form__link--gl-img">Log in with Google +</div>
+                <a href="#" class="form__link gl"><img src="img/gl.png" alt="" class="form__link--gl-img">Log in with Google +</a>
             </div>
             <div class="form__content--block-2">
                 <form action="#" method="get">
