--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -4,7 +4,6 @@
 	<meta charset="UTF-8">
 	<title>lesson_01 form</title>
     <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="css/font-awesome.min.css">
 </head>
 <body>
     <div class="form__wrapper">
@@ -13,8 +12,8 @@
         </header>
         <div class="form__content">
             <div class="form__content--block-1">
-                <a href="#" class="form__link fb"><i class="fa fa-facebook" aria-hidden="true"> </i> Log in with Facebook </a>
-                <a href="#" class="form__link gl"><img src="img/gl.png" alt="" class="form__link--gl-img">Log in with Google +</a>
+                <a href="#" class="form__link fb">Log in with Facebook</a>
+                <a href="#" class="form__link gl">Log in with Google +</a>
             </div>
             <div class="form__content--block-2">
                 <form action="#" method="get">
@@ -22,6 +21,8 @@
                     <input type="text" class="form__input--text">
                     <p>Password</p>
                     <input type="password" class="form__input--password">
+                    <input id="checkBox" type="checkbox"> <span>Remember me</span>
+
                     <input type="submit" class="form__input--btn" value="Log in">
                     <a href="#" class="form__input--link">Need help logging in?</a> 
                 </form>           
