--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -21,7 +21,8 @@
                     <input type="text" class="form__input--text">
                     <p>Password</p>
                     <input type="password" class="form__input--password">
-                    <input id="checkBox" type="checkbox"> <span>Remember me</span>
+                    <input type="checkbox" class="checkBox" id="checkBox">
+                    <label for="checkBox"><span>Remember me</span></label>
 
                     <input type="submit" class="form__input--btn" value="Log in">
                     <a href="#" class="form__input--link">Need help logging in?</a> 
