--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -23,9 +23,10 @@
                     <input type="password" class="form__input--password">
                     <input type="checkbox" class="checkBox" id="checkBox">
                     <label for="checkBox"><span>Remember me</span></label>
-
-                    <input type="submit" class="form__input--btn" value="Log in">
-                    <a href="#" class="form__input--link">Need help logging in?</a> 
+                    <div class="form__input--btn-block">
+                        <input type="submit" class="form__input--btn" value="Log in">
+                        <a href="#" class="form__input--link">Need help logging in?</a>
+                    </div> 
                 </form>           
             </div>
         </div>
