--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -12,27 +12,32 @@
         </header>
         <div class="form__content">
             <div class="form__content--block-1">
-                <a href="#" class="form__link fb">Log in with Facebook</a>
-                <a href="#" class="form__link gl">Log in with Google +</a>
+                <div class="form__wrapper--content">
+                    <a href="#" class="form__link fb">Log in with Facebook</a>
+                    <a href="#" class="form__link gl">Log in with Google +</a>
+                </div>
             </div>
             <div class="form__content--block-2">
-                <form action="#" method="get">
-                    <p>Login</p>
-                    <input type="text" class="form__input--text">
-                    <p>Password</p>
-                    <input type="password" class="form__input--password">
-                    <input type="checkbox" class="checkBox" id="checkBox">
-                    <label for="checkBox"><span>Remember me</span></label>
-                    <div class="form__input--btn-block">
-                        <input type="submit" class="form__input--btn" value="Log in">
-                        <a href="#" class="form__input--link">Need help logging in?</a>
-                    </div> 
-                </form>           
+                <div class="form__wrapper--content">
+                    <form action="#" method="get">
+                        <p>Login</p>
+                        <input type="text" class="form__input--text">
+                        <p>Password</p>
+                        <input type="password" class="form__input--password">
+                        <input type="checkbox" class="checkBox" id="checkBox">
+                        <label for="checkBox"><span>Remember me</span></label>
+                        <div class="form__input--btn-block">
+                            <input type="submit" class="form__input--btn" value="Log in">
+                            <a href="#" class="form__input--link">Need help logging in?</a>
+                        </div> 
+                    </form>
+                </div>           
             </div>
         </div>
         <footer class="form-footer">
             <p>Dont have an account yet? <a href="" class="form__footer--link">Sign up</a></p>
         </footer>
+    </div>
     </div>
 </body>
 </html>
