--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -18,7 +18,7 @@
                 </div>
             </div>
             <div class="form__content--block-2">
-                <div class="form__wrapper--content">
+                <div class="form__wrapper--content border-bottom">
                     <form action="#" method="get">
                         <p>Login</p>
                         <input type="text" class="form__input--text">
