--- a/lesson_01/form/index.html
+++ b/lesson_01/form/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="form__wrapper">
         <header class="form__header">
-            <h3>Log in to the Site</h3>
+            <div class="form__header--title">Log in to the Site</div>
         </header>
         <div class="form__content">
             <div class="form__content--block-1">
@@ -23,7 +23,7 @@
                         <p>Login</p>
                         <input type="text" class="form__input--text">
                         <p>Password</p>
-                        <input type="password" class="form__input--password">
+                        <input type="password" class="form__input--text">
                         <input type="checkbox" class="checkBox" id="checkBox">
                         <label for="checkBox"><span>Remember me</span></label>
                         <div class="form__input--btn-block">
